jvm案例调整